Map styline and GPS integration

--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Personalized Strava Heatmap</title>
     <style>
         /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
