--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -21,7 +21,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>  
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6Eb_4_4v6NYI1Xl1pn-FKVEUrutMkdtY&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key={{ .map_api_key }}&callback=initMap&libraries=&v=weekly"
       defer></script>
     <script src="static/map.js"></script>
   </head>
