--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Personalized Strava Heatmap</title>
-    <style>
-        /* Always set the map height explicitly to define the size of the div
+
+<head>
+  <title>Personalized Strava Heatmap</title>
+  <style>
+    /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
-        #map {
-            height: 100%;
-        }
+    #map {
+      height: 100%;
+    }
 
-        /* Optional: Makes the sample page fill the window. */
-        html,
-        body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>  
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key={{ .map_api_key }}&callback=initMap&libraries=&v=weekly"
-      defer></script>
-    <script src="static/map.js"></script>
-  </head>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-  <body>
-    <input type="hidden" id="map_id" name="map_id" value="{{ .map_id }}">
-    <input type="hidden" id="tile_endpoint" name="tile_endpoint" value="{{ .tile_endpoint }}">
-    <div id="map"></div>
-  </body>
+    #location_button {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      z-index: 1;
+      height: 40px;
+      width: 40px;
+      border: none;
+    }
+
+    #location_button:hover {
+      background-color: rgb(227, 227, 227);
+      color: white;
+      cursor: pointer;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key={{ .map_api_key }}&callback=initMap&libraries=&v=weekly"
+    defer></script>
+  <script src="static/map.js"></script>
+</head>
+
+<body>
+  <input type="hidden" id="map_id" name="map_id" value="{{ .map_id }}">
+  <input type="hidden" id="tile_endpoint" name="tile_endpoint" value="{{ .tile_endpoint }}">
+  <button id="location_button">
+    <!-- <svg viewBox="0 0 8 8"><use xlink:href="#location"></use></svg> -->
+    <img src="static/icons/location.svg" height="10px">
+  </button>
+  <div id="map"></div>
+</body>
+
 </html>
