--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -32,12 +32,31 @@
       color: white;
       cursor: pointer;
     }
+
+    #athlete_status {
+      position: absolute;
+      left: 20px;
+      top: 20px;
+      z-index: 1;
+      min-height: 40px;
+      max-height: 80px;
+
+      background-color: rgb(227, 227, 227);
+      border-radius: 3px;
+      width: 500px;
+
+      padding: 0 auto;
+    }
+
   </style>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key={{ .map_api_key }}&callback=initMap&libraries=&v=weekly"
     defer></script>
+
+  <script src="static/map-style.js"></script>
+  <script src="static/athlete-status.js"></script>
   <script src="static/map.js"></script>
 </head>
 
@@ -45,9 +64,9 @@
   <input type="hidden" id="map_id" name="map_id" value="{{ .map_id }}">
   <input type="hidden" id="tile_endpoint" name="tile_endpoint" value="{{ .tile_endpoint }}">
   <button id="location_button">
-    <!-- <svg viewBox="0 0 8 8"><use xlink:href="#location"></use></svg> -->
     <img src="static/icons/location.svg" height="10px">
   </button>
+  <div id="athlete_status"></div>
   <div id="map"></div>
 </body>
 
