--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,11 +1,99 @@
-{{template "top" .}}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Numans');
 
-<h1>{{ .title }}</h1>
+        html,body,.background{
+            height: 100%;
+            font-family: 'Numans', sans-serif;
+        }
 
+        .background {
+            background-image: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)),url('/static/images/login-background.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            filter: blur(4px);
+            transform: scale(1.1);
+        }
 
-<button id="login">Login to Strava</button>
+        .container{
+            height: 100%;
+            align-content: center;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .card{
+            margin-top: auto;
+            margin-bottom: auto;
+            background-color: rgba(0,0,0,0.5) !important;
+        }
+
+        .card-header > * {
+            display: inline-block;
+            margin: 10px;
+            text-align: center;
+            vertical-align: middle;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .card-header h3{
+            color: white;
+        }
+
+        .input-group-prepend span{
+            width: 50px;
+            background-color: #FFC312;
+            color: black;
+            border:0 !important;
+        }
+
+        .links{
+            color: white;
+        }
+
+        .links a{
+            margin-left: 4px;
+        }
+
+        #login:active {
+            filter: sepia(100%) saturate(300%) brightness(100%) hue-rotate(180deg);
+        }
+    </style>
+	<title>{{ .title }}</title>
+   <!--Made with love by Mutiullah Samim -->
+   
+	<!--Bootsrap 4 CDN-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <!--Fontawesome CDN-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/index.js"></script>
+</head>
+<body>
 <input type="hidden" id="strava_client_id" name="strava_client_id" value="{{ .strava_client_id }}">
-
-<script src="/static/index.js"></script>
-
-{{template "bottom" .}}
+<div class="background"></div>
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+                <h3>Sign In</h3>
+                <img id="login" type="image" alt="Login" src="/static/images/login.png"></img>
+			</div>
+			<div class="card-footer">
+				<div class="d-flex justify-content-center links">
+					Don't have an account?<a href="http://strava.com/">Sign up with Strava</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</body>
+</html>
