Abide by brand guideline

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -89,7 +89,10 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href="http://strava.com/">Sign up with Strava</a>
+					Don't have an account?<a href="http://www.strava.com/register/free">Sign up with Strava</a>
+                </div>
+                <div class="d-flex justify-content-center links">
+                    <img src="/static/images/powered-by-strava.png" alt="Powered by Strava">
 				</div>
 			</div>
 		</div>
