--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -93,7 +93,7 @@
       <div id="status_text">Loading Map Status</div>      
     </div>
     <div id="athlete-data" class="info-box">
-      <div id="status_text">Data pulled from your <a href="https://www.strava.com/dashboard" style="color:#FC4C02;">Strava Profile</a></div>      
+      <div id="status_text">See your data on <a target="_blank" href="https://www.strava.com/athlete/training" style="color:#FC4C02;">Strava</a></div>
     </div>
   </div>
   <div id="map"></div>
