--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Personalized Strava Heatmap</title>
+  <title>{{ .title }}</title>
   <style>
     /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
@@ -32,12 +32,52 @@
       color: white;
       cursor: pointer;
     }
+
+
+    #status {
+      left: 20px;
+      top: 20px;
+    }
+
+    #athlete-data {
+      right: 80px;
+      top: 20px;
+    }
+
+    .info-box {
+      position: absolute;
+      z-index: 1;
+      padding: 10px;
+
+
+      user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
+
+      background-color: rgb(227, 227, 227);
+      border-radius: 2px;
+    }
+
+
+    .info-box > * {
+      display: inline-block;
+      text-align: center;
+      vertical-align: middle;
+      margin: auto;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
   </style>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key={{ .map_api_key }}&callback=initMap&libraries=&v=weekly"
     defer></script>
+
+  <script src="static/map-style.js"></script>
+  <script src="static/athlete-status.js"></script>
   <script src="static/map.js"></script>
 </head>
 
@@ -45,9 +85,17 @@
   <input type="hidden" id="map_id" name="map_id" value="{{ .map_id }}">
   <input type="hidden" id="tile_endpoint" name="tile_endpoint" value="{{ .tile_endpoint }}">
   <button id="location_button">
-    <!-- <svg viewBox="0 0 8 8"><use xlink:href="#location"></use></svg> -->
-    <img src="static/icons/location.svg" height="10px">
+    <img src="/static/icons/location.svg" height="10px">
   </button>
+  <div>
+    <div id="status" class="info-box">
+      <img id="status_icon" width="16px" src="/static/icons/refresh_black_48dp.png"></img>
+      <div id="status_text">Loading Map Status</div>      
+    </div>
+    <div id="athlete-data" class="info-box">
+      <div id="status_text">See your data on <a target="_blank" href="https://www.strava.com/athlete/training" style="color:#FC4C02;">Strava</a></div>
+    </div>
+  </div>
   <div id="map"></div>
 </body>
 
