--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -14,7 +14,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             filter: blur(4px);
-            transform: scale(1.1);
+            /* transform: scale(1.1); */
         }
 
         .container{
