Add logout functionality

--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -40,6 +40,11 @@
     }
 
     #athlete-data {
+      right: 168px;
+      top: 20px;
+    }
+
+    #logout {
       right: 80px;
       top: 20px;
     }
@@ -94,6 +99,9 @@
     </div>
     <div id="athlete-data" class="info-box">
       <div id="status_text">See your data on <a target="_blank" href="https://www.strava.com/athlete/training" style="color:#FC4C02;">Strava</a></div>
+    </div>
+    <div id="logout" class="info-box">
+      <div><a href="logout/" style="color:#FC4C02;">Logout</a></div>
     </div>
   </div>
   <div id="map"></div>
