--- a/api/templates/map.html
+++ b/api/templates/map.html
@@ -157,7 +157,7 @@
       <div id="status_text">See your data on <a target="_blank" href="https://www.strava.com/athlete/training" style="color:#FC4C02;">Strava</a></div>
     </div>
     <div id="logout" class="info-box">
-      <div><a href="logout/" style="color:#FC4C02;">Logout</a></div>
+      <div><a href="/logout/" style="color:#FC4C02;">Logout</a></div>
     </div>
 
     <div id="snackbar">Some text some message..</div>
